update spec for admin pages
